tdf#151375 sw: ODF import: delete any layout frames before ...

... converting subtables.

This avoids use-after-free by the frames or a11y code on deleted cells.

For file open, there is no layout at this point, but when inserting a
file the crash happens.

(regression from commit e366c928819c44b5c253c45dca6dae40b71c9808)

Change-Id: Ia2cbe548fd5cdce7ae2479bfc3dc993ebb3ce830
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141080
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>